--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.unity.animation.rigging": "1.3.1",
+    "com.unity.behavior": "1.0.13",
     "com.unity.collab-proxy": "2.10.0",
     "com.unity.feature.development": "1.0.2",
     "com.unity.inputsystem": "1.14.0",
